my-another-hello/openshift/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-another-hello
spec:
  hosts:
    - "my-another-hello-istio-service.apps.rosa-5mtns.4wdf.p1.openshiftapps.com"
  gateways:
    -  my-https
  http:
    - route:
        - destination:
            host: my-another-hello
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name:  my-https
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE  
        credentialName: "https-credential"
      hosts:
        - "my-another-hello-istio-service.apps.rosa-5mtns.4wdf.p1.openshiftapps.com"
